fix spacing in certificates

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -180,6 +180,11 @@ p {
         overflow: hidden;
         margin-bottom: 2px;
     }
+    .upper-row-certificate {
+        position: relative;
+        overflow: hidden;
+        margin-bottom: -px;
+    }
     .job-title, .degree {
         color: $text-color;
         font-size: 16px;
@@ -203,7 +208,10 @@ p {
         margin-bottom: 10px;
         color: $text-grey;
     }
-
+    .company-certificate {
+        margin-bottom: 2px;
+        color: $text-grey;
+    }
     .project-title {
         font-size: 16px;
         font-weight: 400;
